--- a/extension/options.html
+++ b/extension/options.html
@@ -5,9 +5,9 @@
 
 Collection Server:
 <select id="server">
-    <option value="https://muse.inria.fr/nfytextension/uploads" selected="selected">Muse Server</option>
+    <!-- <option value="https://muse.inria.fr/nfytextension/uploads" selected="selected">Muse Server</option> -->
     <!--<option value="Raspberry Pi">Raspberry Pi</option>-->
-    <option value="http://127.0.0.1:19282">Local</option>
+    <option value="http://127.0.0.1:19282" selected="selected">Local</option>
     <!--<option value="Other">OTHER</option>-->
 </select>
 <br/><br/>
